--- a/mobile/app/src/main/AndroidManifest.xml
+++ b/mobile/app/src/main/AndroidManifest.xml
@@ -31,6 +31,27 @@
         <activity
             android:name=".ui.camera.CameraActivity"
             android:exported="false" />
+        <activity
+            android:name=".ui.auth.SignUpStep1Activity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.auth.SignUpStep2Activity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.welcome.WelcomeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.exercise.ExerciseSelectActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.workout.WorkoutActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.summary.SummaryActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.history.HistoryActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
